<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tw.edu.pu.nihongo_benkyo.ui.game.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_gameChoseFragment"
            app:destination="@id/nav_game" />
        <action
            android:id="@+id/action_nav_home_to_allHistoryFragment"
            app:destination="@id/nav_history" />
    </fragment>

    <fragment
        android:id="@+id/nav_game"
        android:name="tw.edu.pu.nihongo_benkyo.ui.game.GameSettingFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game_setting" >
        <action
            android:id="@+id/action_nav_game_to_gamingSelectionFragment"
            app:destination="@id/gamingSelectionFragment" />
        <action
            android:id="@+id/action_nav_game_to_gamingInputFragment"
            app:destination="@id/gamingInputFragment" />
    </fragment>
    <fragment
        android:id="@+id/gamingSelectionFragment"
        android:name="tw.edu.pu.nihongo_benkyo.ui.game.GamingSelectionFragment"
        tools:layout="@layout/fragment_gaming_selection" >
        <action
            android:id="@+id/action_gamingSelectionFragment_to_nav_history"
            app:destination="@id/nav_history"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/gamingInputFragment"
        android:name="tw.edu.pu.nihongo_benkyo.ui.game.GamingInputFragment"
        tools:layout="@layout/fragment_gaming_input" >
        <action
            android:id="@+id/action_gamingInputFragment_to_nav_history"
            app:destination="@id/nav_history"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/nav_history"
        android:name="tw.edu.pu.nihongo_benkyo.ui.history.AllHistoryFragment"
        android:label="@string/all_history"
        tools:layout="@layout/fragment_all_history" >
        <action
            android:id="@+id/action_allHistoryFragment_to_historyDetailFragment"
            app:destination="@id/historyDetailFragment" />
        <action
            android:id="@+id/action_nav_history_to_nav_game"
            app:destination="@id/nav_game" />
    </fragment>
    <fragment
        android:id="@+id/historyDetailFragment"
        android:name="tw.edu.pu.nihongo_benkyo.ui.history.HistoryDetailFragment"
        android:label="HistoryDetailFragment"
        tools:layout="@layout/fragment_history_detail">
        <action
            android:id="@+id/action_historyDetailFragment_to_nav_game"
            app:destination="@id/nav_game" />
    </fragment>

</navigation>